// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listParameters get parameters grouped by environment 1`] = `
"┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                          environment: development                                           │
├───────────────────────────────────────────┬────────────┬────────────────────────────────────────────────────┤
│ Name                                      │ Updated by │ Updated at                                         │
├───────────────────────────────────────────┼────────────┼────────────────────────────────────────────────────┤
│ DEPLOY_SERVICE_STEP_FUNCTION_NAME         │ severus    │ Friday, July 12th, 2019, 12:21:37 AM (GMT+0000)    │
├───────────────────────────────────────────┼────────────┼────────────────────────────────────────────────────┤
│ DEPLOY_SERVICE_STEP_FUNCTION_WRAPPER_NAME │ severus    │ Thursday, October 3rd, 2019, 7:44:53 PM (GMT+0000) │
└───────────────────────────────────────────┴────────────┴────────────────────────────────────────────────────┘
┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                 environment: all                                                  │
├───────────────────────────────────────────────┬────────────┬──────────────────────────────────────────────────────┤
│ Name                                          │ Updated by │ Updated at                                           │
├───────────────────────────────────────────────┼────────────┼──────────────────────────────────────────────────────┤
│ GRAPHQL_ENDPOINT                              │ serious    │ Thursday, November 29th, 2018, 9:26:47 PM (GMT+0000) │
├───────────────────────────────────────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PAGERDUTY_E2E_STEP_FUNCTION_INTEGRATION_TOKEN │ rubeus     │ Monday, April 13th, 2020, 10:49:25 PM (GMT+0000)     │
├───────────────────────────────────────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PAGERDUTY_E2E_TEST_FAILURES_INTEGRATION_TOKEN │ rubeus     │ Tuesday, April 21st, 2020, 9:32:08 PM (GMT+0000)     │
├───────────────────────────────────────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PHABRICATOR_CONDUIT_TOKEN                     │ serious    │ Friday, November 23rd, 2018, 7:25:09 PM (GMT+0000)   │
├───────────────────────────────────────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PRISMA_ENDPOINT                               │ serious    │ Friday, November 23rd, 2018, 7:26:02 PM (GMT+0000)   │
├───────────────────────────────────────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PRISMA_MANAGEMENT_API_SECRET                  │ serious    │ Tuesday, January 22nd, 2019, 8:46:29 PM (GMT+0000)   │
├───────────────────────────────────────────────┼────────────┼──────────────────────────────────────────────────────┤
│ SENTRY_DSN                                    │ serious    │ Friday, November 23rd, 2018, 7:27:19 PM (GMT+0000)   │
├───────────────────────────────────────────────┼────────────┼──────────────────────────────────────────────────────┤
│ SENTRY_ENVIRONMENT                            │ serious    │ Sunday, November 25th, 2018, 9:11:45 PM (GMT+0000)   │
└───────────────────────────────────────────────┴────────────┴──────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────┐
│                               environment: production                                │
├──────────────────┬────────────┬──────────────────────────────────────────────────────┤
│ Name             │ Updated by │ Updated at                                           │
├──────────────────┼────────────┼──────────────────────────────────────────────────────┤
│ GRAPHQL_ENDPOINT │ serious    │ Thursday, November 29th, 2018, 9:26:47 PM (GMT+0000) │
└──────────────────┴────────────┴──────────────────────────────────────────────────────┘"
`;

exports[`listParameters get parameters grouped by name 1`] = `
"┌────────────────────────────────────────────────────────────────────────────┐
│                  name: DEPLOY_SERVICE_STEP_FUNCTION_NAME                   │
├─────────────┬────────────┬─────────────────────────────────────────────────┤
│ Environment │ Updated by │ Updated at                                      │
├─────────────┼────────────┼─────────────────────────────────────────────────┤
│ development │ severus    │ Friday, July 12th, 2019, 12:21:37 AM (GMT+0000) │
└─────────────┴────────────┴─────────────────────────────────────────────────┘
┌───────────────────────────────────────────────────────────────────────────────┐
│                name: DEPLOY_SERVICE_STEP_FUNCTION_WRAPPER_NAME                │
├─────────────┬────────────┬────────────────────────────────────────────────────┤
│ Environment │ Updated by │ Updated at                                         │
├─────────────┼────────────┼────────────────────────────────────────────────────┤
│ development │ severus    │ Thursday, October 3rd, 2019, 7:44:53 PM (GMT+0000) │
└─────────────┴────────────┴────────────────────────────────────────────────────┘
┌─────────────────────────────────────────────────────────────────────────────────┐
│                             name: GRAPHQL_ENDPOINT                              │
├─────────────┬────────────┬──────────────────────────────────────────────────────┤
│ Environment │ Updated by │ Updated at                                           │
├─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ all         │ serious    │ Thursday, November 29th, 2018, 9:26:47 PM (GMT+0000) │
├─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ production  │ serious    │ Thursday, November 29th, 2018, 9:26:47 PM (GMT+0000) │
└─────────────┴────────────┴──────────────────────────────────────────────────────┘
┌─────────────────────────────────────────────────────────────────────────────┐
│             name: PAGERDUTY_E2E_STEP_FUNCTION_INTEGRATION_TOKEN             │
├─────────────┬────────────┬──────────────────────────────────────────────────┤
│ Environment │ Updated by │ Updated at                                       │
├─────────────┼────────────┼──────────────────────────────────────────────────┤
│ all         │ rubeus     │ Monday, April 13th, 2020, 10:49:25 PM (GMT+0000) │
└─────────────┴────────────┴──────────────────────────────────────────────────┘
┌─────────────────────────────────────────────────────────────────────────────┐
│             name: PAGERDUTY_E2E_TEST_FAILURES_INTEGRATION_TOKEN             │
├─────────────┬────────────┬──────────────────────────────────────────────────┤
│ Environment │ Updated by │ Updated at                                       │
├─────────────┼────────────┼──────────────────────────────────────────────────┤
│ all         │ rubeus     │ Tuesday, April 21st, 2020, 9:32:08 PM (GMT+0000) │
└─────────────┴────────────┴──────────────────────────────────────────────────┘
┌───────────────────────────────────────────────────────────────────────────────┐
│                        name: PHABRICATOR_CONDUIT_TOKEN                        │
├─────────────┬────────────┬────────────────────────────────────────────────────┤
│ Environment │ Updated by │ Updated at                                         │
├─────────────┼────────────┼────────────────────────────────────────────────────┤
│ all         │ serious    │ Friday, November 23rd, 2018, 7:25:09 PM (GMT+0000) │
└─────────────┴────────────┴────────────────────────────────────────────────────┘
┌───────────────────────────────────────────────────────────────────────────────┐
│                             name: PRISMA_ENDPOINT                             │
├─────────────┬────────────┬────────────────────────────────────────────────────┤
│ Environment │ Updated by │ Updated at                                         │
├─────────────┼────────────┼────────────────────────────────────────────────────┤
│ all         │ serious    │ Friday, November 23rd, 2018, 7:26:02 PM (GMT+0000) │
└─────────────┴────────────┴────────────────────────────────────────────────────┘
┌───────────────────────────────────────────────────────────────────────────────┐
│                      name: PRISMA_MANAGEMENT_API_SECRET                       │
├─────────────┬────────────┬────────────────────────────────────────────────────┤
│ Environment │ Updated by │ Updated at                                         │
├─────────────┼────────────┼────────────────────────────────────────────────────┤
│ all         │ serious    │ Tuesday, January 22nd, 2019, 8:46:29 PM (GMT+0000) │
└─────────────┴────────────┴────────────────────────────────────────────────────┘
┌───────────────────────────────────────────────────────────────────────────────┐
│                               name: SENTRY_DSN                                │
├─────────────┬────────────┬────────────────────────────────────────────────────┤
│ Environment │ Updated by │ Updated at                                         │
├─────────────┼────────────┼────────────────────────────────────────────────────┤
│ all         │ serious    │ Friday, November 23rd, 2018, 7:27:19 PM (GMT+0000) │
└─────────────┴────────────┴────────────────────────────────────────────────────┘
┌───────────────────────────────────────────────────────────────────────────────┐
│                           name: SENTRY_ENVIRONMENT                            │
├─────────────┬────────────┬────────────────────────────────────────────────────┤
│ Environment │ Updated by │ Updated at                                         │
├─────────────┼────────────┼────────────────────────────────────────────────────┤
│ all         │ serious    │ Sunday, November 25th, 2018, 9:11:45 PM (GMT+0000) │
└─────────────┴────────────┴────────────────────────────────────────────────────┘"
`;

exports[`listParameters get parameters grouped by undefined 1`] = `
"┌───────────────────────────────────────────────┬─────────────┬────────────┬──────────────────────────────────────────────────────┐
│ Name                                          │ Environment │ Updated by │ Updated at                                           │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ DEPLOY_SERVICE_STEP_FUNCTION_NAME             │ development │ severus    │ Friday, July 12th, 2019, 12:21:37 AM (GMT+0000)      │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ DEPLOY_SERVICE_STEP_FUNCTION_WRAPPER_NAME     │ development │ severus    │ Thursday, October 3rd, 2019, 7:44:53 PM (GMT+0000)   │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ GRAPHQL_ENDPOINT                              │ all         │ serious    │ Thursday, November 29th, 2018, 9:26:47 PM (GMT+0000) │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ GRAPHQL_ENDPOINT                              │ production  │ serious    │ Thursday, November 29th, 2018, 9:26:47 PM (GMT+0000) │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PAGERDUTY_E2E_STEP_FUNCTION_INTEGRATION_TOKEN │ all         │ rubeus     │ Monday, April 13th, 2020, 10:49:25 PM (GMT+0000)     │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PAGERDUTY_E2E_TEST_FAILURES_INTEGRATION_TOKEN │ all         │ rubeus     │ Tuesday, April 21st, 2020, 9:32:08 PM (GMT+0000)     │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PHABRICATOR_CONDUIT_TOKEN                     │ all         │ serious    │ Friday, November 23rd, 2018, 7:25:09 PM (GMT+0000)   │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PRISMA_ENDPOINT                               │ all         │ serious    │ Friday, November 23rd, 2018, 7:26:02 PM (GMT+0000)   │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PRISMA_MANAGEMENT_API_SECRET                  │ all         │ serious    │ Tuesday, January 22nd, 2019, 8:46:29 PM (GMT+0000)   │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ SENTRY_DSN                                    │ all         │ serious    │ Friday, November 23rd, 2018, 7:27:19 PM (GMT+0000)   │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ SENTRY_ENVIRONMENT                            │ all         │ serious    │ Sunday, November 25th, 2018, 9:11:45 PM (GMT+0000)   │
└───────────────────────────────────────────────┴─────────────┴────────────┴──────────────────────────────────────────────────────┘"
`;

exports[`listParameters gets parameters 1`] = `
"┌───────────────────────────────────────────────┬─────────────┬────────────┬──────────────────────────────────────────────────────┐
│ Name                                          │ Environment │ Updated by │ Updated at                                           │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ DEPLOY_SERVICE_STEP_FUNCTION_NAME             │ development │ severus    │ Friday, July 12th, 2019, 12:21:37 AM (GMT+0000)      │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ DEPLOY_SERVICE_STEP_FUNCTION_WRAPPER_NAME     │ development │ severus    │ Thursday, October 3rd, 2019, 7:44:53 PM (GMT+0000)   │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ GRAPHQL_ENDPOINT                              │ all         │ serious    │ Thursday, November 29th, 2018, 9:26:47 PM (GMT+0000) │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ GRAPHQL_ENDPOINT                              │ production  │ serious    │ Thursday, November 29th, 2018, 9:26:47 PM (GMT+0000) │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PAGERDUTY_E2E_STEP_FUNCTION_INTEGRATION_TOKEN │ all         │ rubeus     │ Monday, April 13th, 2020, 10:49:25 PM (GMT+0000)     │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PAGERDUTY_E2E_TEST_FAILURES_INTEGRATION_TOKEN │ all         │ rubeus     │ Tuesday, April 21st, 2020, 9:32:08 PM (GMT+0000)     │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PHABRICATOR_CONDUIT_TOKEN                     │ all         │ serious    │ Friday, November 23rd, 2018, 7:25:09 PM (GMT+0000)   │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PRISMA_ENDPOINT                               │ all         │ serious    │ Friday, November 23rd, 2018, 7:26:02 PM (GMT+0000)   │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PRISMA_MANAGEMENT_API_SECRET                  │ all         │ serious    │ Tuesday, January 22nd, 2019, 8:46:29 PM (GMT+0000)   │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ SENTRY_DSN                                    │ all         │ serious    │ Friday, November 23rd, 2018, 7:27:19 PM (GMT+0000)   │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ SENTRY_ENVIRONMENT                            │ all         │ serious    │ Sunday, November 25th, 2018, 9:11:45 PM (GMT+0000)   │
└───────────────────────────────────────────────┴─────────────┴────────────┴──────────────────────────────────────────────────────┘"
`;

exports[`listParameters gets parameters, using nextToken 1`] = `
"┌───────────────────────────────────────────────┬─────────────┬────────────┬──────────────────────────────────────────────────────┐
│ Name                                          │ Environment │ Updated by │ Updated at                                           │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ DEPLOY_SERVICE_STEP_FUNCTION_NAME             │ development │ severus    │ Friday, July 12th, 2019, 12:21:37 AM (GMT+0000)      │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ GRAPHQL_ENDPOINT                              │ all         │ serious    │ Thursday, November 29th, 2018, 9:26:47 PM (GMT+0000) │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PAGERDUTY_E2E_STEP_FUNCTION_INTEGRATION_TOKEN │ all         │ rubeus     │ Monday, April 13th, 2020, 10:49:25 PM (GMT+0000)     │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PAGERDUTY_E2E_TEST_FAILURES_INTEGRATION_TOKEN │ all         │ rubeus     │ Tuesday, April 21st, 2020, 9:32:08 PM (GMT+0000)     │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PHABRICATOR_CONDUIT_TOKEN                     │ all         │ serious    │ Friday, November 23rd, 2018, 7:25:09 PM (GMT+0000)   │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ PRISMA_MANAGEMENT_API_SECRET                  │ all         │ serious    │ Tuesday, January 22nd, 2019, 8:46:29 PM (GMT+0000)   │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ SENTRY_DSN                                    │ all         │ serious    │ Friday, November 23rd, 2018, 7:27:19 PM (GMT+0000)   │
├───────────────────────────────────────────────┼─────────────┼────────────┼──────────────────────────────────────────────────────┤
│ SENTRY_ENVIRONMENT                            │ all         │ serious    │ Sunday, November 25th, 2018, 9:11:45 PM (GMT+0000)   │
└───────────────────────────────────────────────┴─────────────┴────────────┴──────────────────────────────────────────────────────┘"
`;

exports[`listParameters request fails 1`] = `""`;
